# calendar-app-cpp

./: CMakeLists.txt  README.md  main.cpp
models/bodies/: FriendlyDateBody.h
models/coordinates/: Coordinates.cpp  Coordinates.h
models/note/: Note.cpp  Note.h
models/option_handler/: OptionHandler.cpp  OptionHandler.h
models/option_list/: OptionList.cpp  OptionList.h
models/request/: BasicResponse.cpp  BasicResponse.h  Request.cpp  Request.h
models/responses/fetch_time/: FetchTimeResponse.cpp  FetchTimeResponse.h
models/responses/friendly_date/: FriendlyDateResponse.cpp  FriendlyDateResponse.h
models/utils/: Utils.cpp  Utils.h
